BARC UAT/src/objects/Survey_TV__c.object
<CustomObject>
    <fields>
        <fullName>Customer_VC_No__c</fullName>
        <label>Customer VC No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Do_you_use_recording_feature__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Do you use the recording feature in the Set top box?</inlineHelpText>
        <label>Do you use recording feature</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dongle_Number__c</fullName>
        <label>Dongle Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STB_ID__c</fullName>
        <label>STB ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STB_Make__c</fullName>
        <label>STB Make</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>HuaweiDS366</fullName>
                </value>
                <value>
                    <fullName>Cisco</fullName>
                </value>
                <value>
                    <fullName>DEN</fullName>
                </value>
                <value>
                    <fullName>SITI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Survey__c</fullName>
        <label>Survey</label>
        <referenceTo>Survey__c</referenceTo>
        <relationshipLabel>Survey TV</relationshipLabel>
        <relationshipName>Survey_TV</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TV_screen_size__c</fullName>
        <inlineHelpText>What is the TV screen Size? (Select the appropriate one</inlineHelpText>
        <label>TV screen size</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>14 inches or less</fullName>
                </value>
                <value>
                    <fullName>15-20 inches</fullName>
                </value>
                <value>
                    <fullName>21-27 inches</fullName>
                </value>
                <value>
                    <fullName>28-32 inches</fullName>
                </value>
                <value>
                    <fullName>33-42 inches</fullName>
                </value>
                <value>
                    <fullName>43 inches or more</fullName>
                </value>
                <value>
                    <fullName>15-19 inches</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>43 inches or less</fullName>
                    <isActive>false</isActive>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TV_sets_located_at_your_home__c</fullName>
        <inlineHelpText>Where are each of these TV Sets located at your home? (Select the appropriate one)</inlineHelpText>
        <label>TV sets located at your home</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Hall/Drawing Room</fullName>
                </value>
                <value>
                    <fullName>Bedroom</fullName>
                </value>
                <value>
                    <fullName>Kitchen</fullName>
                </value>
                <value>
                    <fullName>Dining Room</fullName>
                </value>
                <value>
                    <fullName>Servent Room</fullName>
                </value>
                <value>
                    <fullName>Prayer Room</fullName>
                </value>
                <value>
                    <fullName>Balcony</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Television_Screen_at_your_home__c</fullName>
        <inlineHelpText>What is the Television screens at your home? ? (Select the appropriate one)</inlineHelpText>
        <label>Television Screen at your home</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CRT</fullName>
                </value>
                <value>
                    <fullName>LCD</fullName>
                </value>
                <value>
                    <fullName>Plasma</fullName>
                </value>
                <value>
                    <fullName>HDTV</fullName>
                </value>
                <value>
                    <fullName>Projection</fullName>
                </value>
                <value>
                    <fullName>LED</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
                <value>
                    <fullName>HDTV – 2K, 4K</fullName>
                    <isActive>false</isActive>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_of_TV__c</fullName>
        <inlineHelpText>What type of TV/TVs do you have at your home? (Select the appropriate one)</inlineHelpText>
        <label>Type of TV</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Color TV</fullName>
                </value>
                <value>
                    <fullName>Black &amp; White</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>USB_HUB_Installed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>USB HUB Installed</label>
        <type>Checkbox</type>
    </fields>
    <label>Survey TV</label>
    <nameField>
        <displayFormat>ST-{0}</displayFormat>
        <label>Survey TV No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Survey TV</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>